<resources>
    <string name="app_name">user-authetication-with-firebase</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_user">Not registered user? Click Here</string>
    <string name="title_activity_signup">Signup</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="go_back_signin">Back to Signin</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="bt_signup">Signup</string>
</resources>
